# serializer version: 1
# name: TestFailureSnapshot.test_terminal_failure_sequence
  dict({
    'edits': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 15548997,
            'description': 'Mention me to try again.',
            'footer': 'Atlas · 15s · $0.003',
            'title': 'Something went wrong.',
          }),
        ]),
      }),
    ]),
    'sends': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'footer': '0s',
            'title': 'Working on it…',
          }),
        ]),
      }),
    ]),
  })
# ---
# name: TestSuccessSequenceSnapshot.test_thinking_tool_then_done_sequence
  dict({
    'edits': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'footer': '11s',
            'title': 'Working on it…',
          }),
        ]),
      }),
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 5763719,
            'description': None,
            'footer': 'Atlas · 11s · $0.008',
            'title': None,
          }),
        ]),
      }),
      dict({
        'content': 'Here is the answer.',
        'embeds': None,
      }),
    ]),
    'sends': list([
      dict({
        'content': None,
        'embeds': list([
          dict({
            'color': 3447003,
            'description': None,
            'footer': '0s',
            'title': 'Working on it…',
          }),
        ]),
      }),
    ]),
  })
# ---
